# imonitor

./: .gitignore  ASCEND_VLLM_STARTUP.md  FUZZY_META_PATTERN_OUTLOOK.md  HANDOFF_TO_JINGYUAN_20260425.md  PATCH_006_DISCOVERY_PATH.md  README.md  VLLM_ASCEND_SMOKE_REPORT_20260413.md  hprofile.yaml  pyproject.toml
analyzer/: README.md  (+3 more)
imonitor/: .gitignore  README.md  cli.py  config.py  daemon_cli.py  pyproject.toml  web_cli.py
imonitor/core/: launcher.py
imonitor/daemon/: app.py  process_sampler.py  store.py  system_sampler.py
imonitor/imonitor/: __init__.py  cli.py  config.py  console.py  web_cli.py
imonitor/imonitor/core/: __init__.py  hub.py  launcher.py  registry.py  scheduler.py  types.py
imonitor/imonitor/daemon/: app.py  models.py  process_sampler.py  service.py  system_sampler.py
imonitor/imonitor/pipelines/: summarizer.py
imonitor/imonitor/remote/: __init__.py
imonitor/imonitor/reports/: html_report.py
imonitor/imonitor/sensors/: gpu_nvml.py  mem_procfs.py  proc_tree.py
imonitor/imonitor/signals/: bus.py  normalize.py  schema.py
imonitor/imonitor/sinks/: base.py  live_sink.py  parquet_sink.py
imonitor/imonitor/web/: __init__.py  app.py
imonitor/imonitor/webui/: index.html
imonitor/imonitor/webui/assets/: taskmanager.js
imonitor/pipelines/: aggregator.py  rollup.py
imonitor/remote/: client.py  transcript.py
imonitor/sensors/: base.py  cpu_procfs.py  gpu_nvml.py  io_procfs.py  net_procfs.py
imonitor/signals/: __init__.py
imonitor/sinks/: __init__.py  csv_sink.py  sqlite_sink.py
imonitor/webui/: index.html
imonitor/webui/assets/: taskmanager.css  taskmanager.js
(+124 files in other folders)
